# Pixeler

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
examples/: example_bot.py  mouse_tracking.py  notepad_object_finding_cv.py  notepad_object_finding_win32.py  notepad_writing.py  object_color_tracking.py  screen_tracking.py  shape_drawing.py  win32_window_drawing.py  window_tracking.py
src/: main.py
src/bot/: bot.py  bot_status.py  bot_thread.py
src/math/: rectangle.py
src/pixeler/bot/: bot.py  bot_thread.py
src/pixeler/input/: keyboard.py  mouse.py  win32_window.py  window.py
src/pixeler/math/: point.py  random.py  rectangle.py
src/pixeler/vision/: color.py  ocr.py  oir.py  utils.py
src/pixeler/window/: abstract_window.py  overlay.py  win32_window.py  window.py
src/vision/: color.py  oir.py
