[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixeler"
version = "0.0.5"
authors = [
    { name="Klobbix", email="klobbix@gmail.com" },
]
description = "An automation framework for python using OpenCV"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/klobbix/Pixeler"
Issues = "https://github.com/klobbix/Pixeler/issues"